# metadataSync

./: LICENSE  README.md  pyproject.toml
src/metadataSync/: __main__.py  config.py  fetch.py  manifest.py  orchestrator.py  storage.py  transform.py
