[project]
name = "metadatasync"
version = "0.1.0"
description = ""
authors = [{ name = "Drew Ferrell", email = "dfrll@proton.me" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars (>=1.40.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pyrecount @ git+https://github.com/dfrll/pyrecount.git",
    "httpx (>=0.28.1,<0.29.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "pyarrow (>=24.0.0,<25.0.0)",
]

[tool.poetry]
packages = [{ include = "metadataSync", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
